# synapse

./: Cargo.toml  example_config.toml
.github/workflows/: rust.yml
adns/src/: lib.rs
installers/debian/: preinst  synapse-bt.service
rpc/: Cargo.toml
rpc/src/: criterion.rs  message.rs  resource.rs
session/: Cargo.toml
session/src/: lib.rs
src/: log.rs  stat.rs
src/control/: job.rs  mod.rs
src/rpc/: processor.rs  transfer.rs
src/torrent/: bitfield.rs  choker.rs  mod.rs
src/torrent/picker/: mod.rs
src/tracker/dht/: mod.rs  rt.rs
src/tracker/http/: mod.rs
src/tracker/udp/: mod.rs
src/util/: http.rs
sycli/: Cargo.toml
synulator/src/: main.rs
