[package]
name = "synapse-bt"
readme = "README.md"
description = "Synapse BitTorrent client"
version = "1.0.0"
authors = ["Luminarys <postmaster@gensok.io>"]
build = "build.rs"
license = "ISC"
repository = "https://github.com/pyrsia/synapse"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "synapse"

[workspace]
members = ["sycli", "rpc", "session", "bencode", "adns", "protocol", "sstream"]
exclude = ["synulator"]

[build-dependencies]
cc = "1.0"

[dependencies]
base32 = "0.3.1"
base64 = "0.9.2"
bincode = "1"
byteorder = "1"
fnv = "1"
fs_extra = "1"
httparse = "1"
http-range = "0.1"
lazy_static = "1"
libc = "0.2"
metrohash = "1"
net2 = "0.2"
nix = "0.11"
percent-encoding = "2.1.0"
rand = "0.5.3"
rustls = "0.18.0"
sha-1 = "0.9.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
shellexpand = "1"
synapse-rpc = { path = "rpc" }
synapse-session = { path = "session" }
synapse-bencode = { path = "bencode" }
synapse-protocol = { path = "protocol" }
sstream = { path = "sstream" }
adns = { path = "adns" }
toml = "0.4"
url = "2.2.2"
getopts = "0.2"
assert_matches = "1.3.0"
ctrlc = "3.1"
fs2 = "0.4"

[dependencies.amy]
version = "0.10"
default-features = false
features = ["no_timerfd"]

[dependencies.time]
version = "0.3.6"
default-features = false
features = ["formatting", "parsing", "serde"]

[dependencies.error-chain]
version = "0.12.1"
default-features = false
features = []

[dependencies.num-bigint]
version = "0.2.0"
default-features = false
features = ["serde", "std"]

[dev-dependencies]
platina = "0.1.0"

[profile.bench]
opt-level = 3
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
panic = 'unwind'

[features]
default = []
autobahn = []
allocator = []
mmap = []

[package.metadata.deb]
assets = [
    ["target/release/synapse", "usr/bin/", "755"],
    ["target/release/sycli", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/synapse/README", "644"],
    ["example_config.toml", "usr/local/share/synapse/synapse.toml", "644"],
    ["sycli_config.toml", "usr/local/share/synapse/sycli.toml", "644"]
]
section = "devel"
maintainer-scripts = "installers/debian/"
systemd-units = { unit-name = "synapse-bt", unit-scripts = "installers/debian/" }
